test_suite/tests/ui/identifier/serialize.stderr
error: field identifiers cannot be serialized
 --> $DIR/serialize.rs:5:1
  |
5 | / #[serde(field_identifier)]
6 | | enum F {
7 | |     A,
8 | |     B,
9 | | }
  | |_^

error: aborting due to previous error

